apps/n8n/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.thiemo.click`)
      kind: Rule
      services:
        - name: n8n-service
          port: 5678
  tls:
    secretName: n8n-tls
